# zapjs

./: .dockerignore  BINFIX.md  BUNDLE_SIZE_REPORT.md  CODEGENWORK.md  Cargo.toml  DESIGNSYSTEM.json  Dockerfile  README.md  SPLICE_IMPLEMENTATION.md  ZAPJS.md  package.json  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: benchmark.yml
benchmarks/: .gitignore  README.md  RESULTS.md
benchmarks/comparative/: compare.ts  package.json
benchmarks/regression/: detect-regression.ts
benchmarks/scripts/: install-tools.sh  run-all.sh
docs/: API.md  ARCHITECTURE.md  README.md  USAGE.md  ZAPJS.md  getting-started.md
docs/api/: cli.md  dev-server.md  router.md  runtime.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: api-routes.md  file-routing.md
docs/internals/: build-pipeline.md
docs/rust/: zap-codegen.md
quilt-tool/: client.sh
scripts/: build-binaries.js  publish.sh
tests/e2e-splice/: splice-context.test.ts  splice-crash-recovery.test.ts  splice-e2e.test.ts  (+1 more)
zaptest/: .gitignore  Cargo.toml  package.json  zap.config.ts
zaptest/routes/api/: benchmarks.ts  echo.ts  features.ts  hello.ts  posts.$id.ts  posts.ts  ssg-info.ts  stats.ts  streaming-info.ts  subscribe.ts  users.$id.ts  users.ts  websocket-info.ts  ws-echo.ts
zaptest/server/src/: main.rs
zaptest/src/: router.tsx
zaptest/src/api/: backend.d.ts  backend.ts  rpc-client.ts  server.ts  types.ts
zaptest/src/components/: CodeDemo.tsx  Examples.tsx  Features.tsx  Hero.tsx  Performance.tsx
zaptest/src/components/docs/: DocsSections.tsx
zaptest/src/lib/: utils.ts
(+11 files in other folders)
