[package]
name = "zaptest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zap"
path = "server/src/main.rs"

[dependencies]
zap_server = { path = "../packages/server", package = "zap" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
